[package]
name = "thumbor"
version = "0.1.0"
edition = "2021"


[dependencies]
axum = { version = "0.7.5", features = ["macros"] } # web 服务器
anyhow = "1.0.86" # 错误处理
base64 = "0.22.1" # base64 编码/解码
bytes = "1" # 处理字节流
image = "0.25.2" # 处理图片
lazy_static = "1.5.0" # 通过宏更方便地初始化静态变量
lru = "0.12.3" # LRU 缓存
percent-encoding = "2.3.1" # url 编码/解码
photon-rs = "0.3.2" # 图片效果
prost = "0.13.1" # protobuf 处理
reqwest = "0.12.5" # HTTP cliebnt
serde = { version = "1", features = ["derive"] } # 序列化/反序列化数据
tokio = { version = "1", features = ["full"] } # 异步处理
tower = { version = "0.4", features = [
  "util",
  "timeout",
  "load-shed",
  "limit",
] } # 服务处理及中间件
tower-http = { version = "0.5.2", features = [
  "add-extension",
  "compression-full",
  "trace",
] } # http 中间件
tracing = "0.1" # 日志和追踪
tracing-subscriber = "0.3.18" # 日志和追踪
serde_yaml = "0.9.34"

[build-dependencies]
prost-build = "0.13.1" # 编译 protobuf
